# conduit

./: .gitignore  README.md  combined-assistant-custom-instructions.md  jira-test-file.md  pyproject.toml
conduit/cli/: main.py
conduit/cli/commands/: confluence.py  jira.py
conduit/config/: config.yaml
conduit/core/: config.py
conduit/mcp/: __init__.py  __main__.py  server.py
docs/coding-assistants/: conduit-assistant-manual.md
manual_testing/: confluence_commands.md  jira_commands.md  pylib_test.py
tests/cli/: test_content_commands.py
tests/core/: test_content.py
